# rust-backend-base

./: .editorconfig  .env.example  .rustfmt.toml  Cargo.toml  README.md
backend/: Cargo.toml  build.rs
backend/src/: constants.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/extractors/: authentiacted.rs  mod.rs
backend/src/api/openapi/: mod.rs
backend/src/api/openapi/modifiers/: base_route.rs  security.rs
backend/src/api/responses/: mod.rs
backend/src/api/routes/: mod.rs
backend/src/api/routes/admin/: delete.rs  get_one.rs  mod.rs  update.rs
backend/src/api/routes/auth/: login_web.rs  logout.rs
backend/src/app/: mod.rs
backend/src/app/admin/: mod.rs
backend/src/app/auth/errors/: mod.rs
backend/src/cli/: mod.rs
backend/src/config/: mod.rs
backend/src/config/finalized/: api.rs  log_level.rs  mod.rs
backend/src/dto/user/: mod.rs  user_create_dto.rs
backend/src/dtos/: filter_order_by.rs  mod.rs  paginated_result.rs  pagination_filter.rs  pagination_filter_with_search.rs  pagination_filter_with_search_order.rs
backend/src/dtos/admin/: create.rs  mod.rs  update.rs
backend/src/dtos/helpers/: mod.rs  null_undefined_value.rs  pagination_filter_with_search_order.rs
backend/src/dtos/user/: mod.rs
backend/src/dtos/utils/: mod.rs
backend/src/error/: mod.rs  to_boxed_error.rs
backend/src/modules/user/: mod.rs
backend/src/modules/user/dtos/user/: create.rs  mod.rs  update.rs
backend/src/modules/user/enums/: mod.rs  user_sort_columns.rs
backend/src/permission/: mod.rs
backend/src/validators/: mod.rs
backend/src/validators/array/: mod.rs
backend/src/validators/string/: mod.rs
custom-macros/: Cargo.toml
custom-macros/src/: lib.rs
custom-macros/src/axum_response/: generate.rs  mod.rs  parse.rs
custom-macros/src/from_dyn_error_utils/: generate.rs  mod.rs  parse.rs
custom-macros/src/from_sqlx_error/: generate.rs  generate_sea_orm.rs  mod.rs  parse.rs
custom-macros/src/generate_permissions/: generate.rs  mod.rs  parse.rs
custom-macros/src/sortable/: generate.rs  mod.rs  parse.rs
dto-variants/: Cargo.toml
dto-variants/src/: lib.rs
dto-variants/src/state/: mod.rs  variants.rs
dto-variants/src/utils/: mod.rs  parse_state.rs
scripts/: sqlx-pg-migration.sh  sqlx-pg-revert
sea-orm-migrations/: Cargo.toml
sea-orm-migrations/src/: m20220101_000001_create_table.rs  main.rs
sea-orm-pg-migrations/: Cargo.toml
sea-query-pg-migrations/: Cargo.toml  build.rs
sea-query-pg-migrations/src/: lib.rs
sea-query-pg-migrations/src/migrations/: 20251202210529_init.down.sql  20251202210529_init.up.sql
src/: constants.rs  lib.rs  main.rs  prelude.rs
src/api/: mod.rs  state.rs
src/api/middlewares/: extract_auth_data.rs  mod.rs
src/api/openapi/: mod.rs
src/api/openapi/modifiers/: mod.rs
src/api/responses/: server_error.rs
src/api/routes/: mod.rs
src/api/routes/admin/: create.rs  delete.rs  get_list.rs  get_one.rs  mod.rs  update.rs
src/api/routes/auth/: login.rs  login_web.rs  logout.rs  logout_web.rs  mod.rs
src/api/utils/: mod.rs  token_jwt_into_cookie.rs
src/api/web_ui/: mod.rs
src/app/: mod.rs
src/app/admin/: mod.rs
src/app/admin/errors/: mod.rs
src/app/auth/: mod.rs
src/app/auth/errors/: mod.rs
src/config/env/: mod.rs
src/config/finalized/: listen_address.rs
src/dtos/: mod.rs
src/dtos/admin/: create.rs  mod.rs  update.rs
src/dtos/auth/: auth_data.rs  login.rs  mod.rs
src/dtos/helpers/: paginated_result.rs  pagination_filter.rs  pagination_filter_with_order.rs  pagination_filter_with_search.rs  pagination_filter_with_search_order.rs
src/dtos/user/: user_login.rs
src/dtos/utils/: seed.rs
src/enums/: roles.rs
src/permission/: mod.rs  roles.rs
src/utils/: hash_password.rs  jwt.rs  mod.rs
src/validators/array/: length.rs
src/validators/numbers/: between.rs  mod.rs
src/validators/object/: btreemap_length.rs  hashmap_length.rs  mod.rs
src/validators/string/: length.rs  mod.rs
