[workspace]
resolver = "3"
members = [".", "custom-macros", "sea-orm-migrations", "sea-query-pg-migrations"]

[workspace.package]
edition = "2024"
authors = ["Mehran Hadinezhad"]
description = "Backend Base. an example of implementing a CRUD."
readme = "./README.md"
license = "MIT"

[workspace.dependencies]
serde = "1.0.228"
serde_with = { version = "3.21.0", features = ["time_0_3", "base64"] }
serde-validate = "0.2.0"
serde_json = "1.0.150"
ron = "0.12.1"
thiserror = "2.0.18"
sqlx = { version = "0.9.0", features = ["derive", "postgres", "time", "runtime-tokio", "tls-native-tls", "uuid"] }
time = { version = "0.3.49", features = ["serde", "serde-human-readable"] }
uuid = { version = "1.23.3", features = ["serde", "v4", "v7"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"
utoipa = { version = "5.5.0", features = ["time", "axum_extras", "uuid", "preserve_order", "preserve_path_order"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
axum = { version = "0.8.9", features = ["http2", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "compression-full"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
itertools = "0.15.0"
sea-query-pg-migrations = { path = "./sea-query-pg-migrations" }
sea-query = { version = "1.0.0-rc.22", default-features = false, features = ["derive", "backend-postgres"] }
sea-query-sqlx = { version = "0.9.1", features = [ "sqlx-postgres", "with-json", "with-rust_decimal", "with-bigdecimal", "with-uuid", "with-time", "with-ipnetwork", "with-mac_address", "runtime-tokio-rustls" ] }
sea-orm = { version = "2.0.0-rc.41", features = ["sqlx-postgres", "with-json", "with-rust_decimal", "with-bigdecimal", "with-uuid", "with-time", "with-ipnetwork", "with-mac_address", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "2.0.0-rc.41", features = ["runtime-tokio-rustls", "sqlx-postgres"]}
sea-orm-migrations = { path = "./sea-orm-migrations" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "parking_lot", "time"] }
custom-macros = { path = "./custom-macros" }
sha2 = "0.11.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["socket"] }
papaya = "0.2.4"
redis = { version = "1.2.4", features = ["tokio-rustls-comp", "connection-manager"] }
indexmap = "2.12.1"
memory-serve = "2.1.0"
regex = { version = "1.12.4" }
validator = "0.20.0"
heck = "0.5.0"

[package]
name = "rust-backend-base"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
serde-validate = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
custom-macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
utoipa-rapidoc = { workspace = true, optional = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
sea-query-pg-migrations = { workspace = true }
sea-query = { workspace = true }
sea-query-sqlx = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migrations = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
papaya = { workspace = true }
redis = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
memory-serve = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
regex = { workspace = true }
validator = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[features]
default = ["swagger", "develop"]
develop = []
swagger = ["dep:utoipa-swagger-ui", "dep:utoipa-rapidoc", "dep:indexmap"]
embed-web-ui = ["dep:memory-serve"]
