[package]
name = "custom-macros"
version = "0.1.0"
edition = "2024"
authors = ["Mehran Hadinezhad"]
description = "Custom Macro helpers"
keywords = []
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.108", features = ["extra-traits"] }
quote = "1.0.41"
proc-macro2 = "1.0.102"
heck = "0.5.0"
