[package]
name = "dto-variants"
version = "0.1.0"
edition = "2024"
authors = ["Mehran Hadinezhad"]
description = "Generate multiple struct variants (DTOs) from a single base struct by excluding or inculding struct fields. Useful for APIs where request/response types share most fields."
keywords = ["macro", "pickType", "struct variant", "DTO"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"
